--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,6 @@ version: '3'
 services:
   python:
     build: .
-    container_name: python
+    container_name: youtubeapi_oauth
     volumes:
       - ./app:/opt/app
